# bewiseApp

./: .dockerignore  .env_example  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose-test.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yaml
app/: application.py  conftest.py  main.py  routers.py
app/api/application/: dao.py  redis_client.py  router.py  schemas.py  utils.py
app/api/default/: router.py
app/core/: logger_config.py  settings.py
app/dao/: base.py  database.py
app/kafka/: check_example_sent_message.py  dependencies.py  producer.py
app/models/: __init__.py  application.py
app/redis/: check_example_connect_redis.py  dependencies.py  redis_client.py
app/tests/: conftest.py  mock_applications.json  utils.py
app/tests/api/: test_application.py  test_default.py
app/tests/client/: conftest.py  test_default_router.py  test_kafka.py  test_redis.py
app/tests/shcemas/: test_applications.py
app/tests/unit/: conftest.py  test_applications.py  test_default_router.py  test_kafka.py  test_utils.py
docker/: app.sh
migrations/: env.py
migrations/versions/: 39d2a31bfcc1_initial_migration.py
