[project]
name = "bewise"
version = "0.1.0"
description = ""
authors = [
    {name = "Nik",email = "erofeev.nik.it@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.6,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "pre-commit (>=4.0.1,<5.0.0)",
    "pydantic-settings (>=2.7.1,<3.0.0)",
    "jinja2 (>=3.1.5,<4.0.0)",
    "sqlalchemy (>=2.0.37,<3.0.0)",
    "alembic (>=1.14.0,<2.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "greenlet (>=3.1.1,<4.0.0)",
    "orjson (>=3.10.14,<4.0.0)",
    "redis (>=5.2.1,<6.0.0)",
    "aiokafka (>=0.12.0,<0.13.0)",
    "colorama (>=0.4.6,<0.5.0)",
    "email-validator (>=2.2.0,<3.0.0)",
    "prometheus-fastapi-instrumentator (>=7.0.2,<8.0.0)",
    "types-redis (>=4.6.0.20241004,<5.0.0.0)",
    "annotated-types (>=0.7.0,<0.8.0)",
    "black (==24.3.0)",
    "ruff (>=0.9.1,<0.10.0)",
    "mypy (>=1.14.1,<2.0.0)"
]


[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"



[tool.black]
line-length = 120
skip-string-normalization = true
exclude = '''
\\.git|__pycache__
|\\.yml\\.enc
|\\*/migrations/\\*
|\\*/docker/\\*
|venv
|env
'''


[tool.ruff]
line-length = 120



[tool.isort]
profile = 'black'
line_length = 120
force_alphabetical_sort_within_sections = true
ensure_newline_before_comments = true
combine_as_imports = true
combine_star = true
skip_gitignore = true
balanced_wrapping = true
skip = ['.git',
    '__pycache__',
    '*.yml.enc',
    'migrations/',
    '*/docker/*',
    '*/venv/*',
    '*/env/*',
]

[tool.mypy]
strict = false
ignore_missing_imports = true
exclude = "venv|migrations"


